--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+
+    <!--image tag with only src attribute-->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"><br>
+
+    <!--image tag with src attribute and alt text-->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="This is a lion"><br>
+
+    <!--image tag with src attribute, alt text and title attribute-->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="This is a lion" title="lion with a great mane roaring">
+
   </body>
 </html>
